--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "waaroverheid",
   "version": "0.1.0",
+  "homepage": "https://waaroverheid.github.io",
   "private": true,
   "dependencies": {
     "react": "^16.1.1",
