--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://waaroverheid.github.io",
   "private": true,
   "dependencies": {
+    "js-levenshtein": "^1.1.3",
     "leaflet": "^1.2.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
