--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.1.1",
     "react-input-range": "^1.2.2",
     "react-leaflet": "^1.7.7",
+    "react-responsive-modal": "^2.0.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
