--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "dependencies": {
     "js-levenshtein": "^1.1.3",
     "leaflet": "^1.2.0",
+    "moment": "^2.20.1",
+    "node-sass-chokidar": "^0.0.3",
     "prop-types": "^15.6.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "react": "^16.2.0",
+    "react-dates": "^16.0.2",
+    "react-dom": "^16.2.0",
     "react-input-range": "^1.3.0",
     "react-leaflet": "^1.7.7",
     "react-responsive-modal": "^2.0.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",  
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
