--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "react-input-range": "^1.3.0",
     "react-leaflet": "^1.7.7",
     "react-responsive-modal": "^2.0.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "recharts": "^1.0.0-beta.9"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",  
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
