--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "js-levenshtein": "^1.1.3",
     "leaflet": "^1.2.0",
+    "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "node-sass-chokidar": "^0.0.3",
     "prop-types": "^15.6.0",
