--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.2.0",
     "react-dates": "^16.0.2",
     "react-dom": "^16.2.0",
+    "react-infinite-scroller": "^1.1.3",
     "react-input-range": "^1.3.0",
     "react-leaflet": "^1.7.7",
     "react-responsive-modal": "^2.0.0",
