--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-input-range": "^1.3.0",
     "react-leaflet": "^1.7.7",
     "react-responsive-modal": "^2.0.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "recharts": "^1.0.0-beta.9"
   },
