--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://waaroverheid.github.io",
   "private": true,
   "dependencies": {
+    "history": "^4.7.2",
     "js-levenshtein": "^1.1.3",
     "leaflet": "^1.2.0",
     "lodash": "^4.17.4",
@@ -16,10 +17,14 @@
     "react-infinite-scroller": "^1.1.3",
     "react-input-range": "^1.3.0",
     "react-leaflet": "^1.7.7",
+    "react-redux": "^5.0.6",
     "react-responsive-modal": "^2.0.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
-    "recharts": "^1.0.0-beta.9"
+    "recharts": "^1.0.0-beta.9",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
