--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "1.0.17",
     "recharts": "^1.0.0-beta.9",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
