--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "1.0.17",
     "recharts": "^1.0.0-beta.9",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "striptags": "^3.1.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
