icon pack / statics

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,35 +1,35 @@
 {
-  "short_name": "Waaroverheid",
-  "name": "Waaroverheid",
+  "short_name": "WaarOverheid",
+  "name": "WaarOverheid",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "48x48 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "images/logo-48x48.png",
+      "src": "images/WO-48x48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
     {
-      "src": "images/logo-96x96.png",
+      "src": "images/WO-96x96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "images/logo-192x192.png",
+      "src": "images/WO-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "images/logo-512x512.png",
+      "src": "images/WO-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#ffe1d0",
+  "background_color": "#ffe1d0"
 }
