change background to white

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -31,5 +31,5 @@
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#ffe1d0",
-  "background_color": "#ffe1d0"
+  "background_color": "#ffffff"
 }
