--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-scripts": "1.0.17",
     "recharts": "^1.0.0-beta.9",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0",
-    "striptags": "^2.2.1"
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
