--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "homepage": "https://waaroverheid.github.io",
   "private": true,
   "dependencies": {
+    "es6-symbol": "^3.1.1",
     "history": "^4.7.2",
+    "iterators-polyfill": "^1.0.2",
     "js-levenshtein": "^1.1.3",
     "leaflet": "^1.2.0",
     "lodash": "^4.17.4",
