--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dates": "^16.0.2",
