build website css

--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
+    "build-site-css": "node-sass-chokidar public/website/ -o public/website/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "build": "npm-run-all build-css build-js build-site-css",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
