Update package.json with watch-site-css

--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "build-css": "node-sass-chokidar src/ -o src/",
     "build-site-css": "node-sass-chokidar public/website/ -o public/website/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "watch-site-css": "npm run build-site-css && node-sass-chokidar public/website -o public/website/ --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "npm-run-all -p watch-css watch-site-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js build-site-css",
     "test": "react-scripts test --env=jsdom",
